--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ішеу</title>
+    <title>Web Developer Portfolio Projects</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="less/less.min.js">
+    <link rel="stylesheet" href="less/style.less">
 </head>
 <body>
     
