--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web Developer Portfolio Projects</title>
+    <title>Portfolio Project</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="less/less.min.js">
-    <link rel="stylesheet" href="less/style.less">
 </head>
 <body>
-    
+   <div class="wrapper">
+    <header class="header">
+        
+    </header>
+    </div>
 </body>
 </html>
