--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
    <div class="wrapper">
+   <div class="container">
     <header class="header">
         
     </header>
+    </div>
     </div>
 </body>
 </html>
