--- a/app/index.html
+++ b/app/index.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio Project</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="fonts/stylesheet.css">
 </head>
 <body>
    <div class="wrapper">
-   <div class="container">
     <header class="header">
-        
+        <div class="container">
+        </div>
     </header>
-    </div>
+<!-- First Block -->
+    <section class="block_head">
+        <div class="container">
+        </div>
+    </section>
+<!-- infoBlock 1 -->
+    <section class="info_block1">
+        <div class="container">
+        <div class="content">
+            <img src="images/Icon.png" alt="png" class="icon">
+            <h2 class="h2">A NEW GENERATION OF VINTAGE BIKE</h2>
+            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        </div>
+        </div>
+    </section>
     </div>
 </body>
 </html>
