--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
     <title>Portfolio Project</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap-grid.css">
 </head>
 <body>
    <div class="wrapper">
@@ -18,7 +20,36 @@
         </div>
     </section>
 <!-- infoBlock 1 -->
-    <section class="info_block1">
+    <section class="info_block">
+        <div class="container">
+        <div class="content">
+            <img src="images/Icon.png" alt="png" class="icon">
+            <h2 class="h2">A NEW GENERATION OF VINTAGE BIKE</h2>
+            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        </div>
+        </div>
+    </section>
+    <!-- contentBlock 1 -->
+    <section class="content_block1">
+      <div class="container">
+      <div class="row">
+       <div class="box1">
+              <img src="images/Layer-101.jpg" alt="" class="">
+              <img src="images/Logo1.png" alt="logo" class="icon_logo">
+       </div>
+        <div class="box2">
+             <div class="mincontent">
+                <img src="images/Icon1.png" alt="png" class="icon">
+                <h2 class="h2">vintage Oliva</h2>
+                <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
+            </div>
+             <img src="images/Layer-11.jpg" alt="" class="lauer">
+        </div>
+        </div>
+        </div>
+    </section>
+    <!-- infoBlock 2 -->
+    <section class="info_block">
         <div class="container">
         <div class="content">
             <img src="images/Icon.png" alt="png" class="icon">
