--- a/app/index.html
+++ b/app/index.html
@@ -109,11 +109,51 @@
         </div>
         </div>
      </section>
-      <section class="block_buttom">
-        <div class="container">
-            <button class="shope_button">discaver the shop</button>
-        </div>
-    </section>
+        <section class="block_buttom">
+            <div class="container">
+                <button class="shope_button">discaver the shop</button>
+            </div>
+        </section>
+         <!-- infoBlock 3 -->
+        <section class="info_block3">
+            <div class="container">
+                <div class="content">
+                   <img src="images/Logo.png" alt="logo">
+                   <h3>Stay on the saddle!</h3>
+                    <form class="form">
+                            <ul>
+                                <li>
+                                   <input type="email" name="email" class="li_email" placeholder="enter your email..." />
+                                   <input type="submit" name="submit" class="li_buttom" value="GO" />
+                                </li>
+                            </ul>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <div class="clear"></div>
+        <footer class="footer">
+           <div class="container">
+            <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 b-box">
+                                <div class="text">
+                                       <h5>AOD New York</h5>
+                                       <p>2250 Lexington Avenue</p>
+                                       <p>New York, NY 10035  - info@domain.com</p>
+                                </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 b-box">
+                           <a href="#" class="links"><img src="images/Vector-Smart-Object2.png" class="vector" alt="photo"></a>
+                           <a href="#" class="links"><img src="images/Vector-Smart-Object1.png" class="vector" alt="photo"></a>
+                           <a href="#" class="links"><img src="images/Vector-Smart-Object.png" class="vector" alt="photo"></a>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 b-box">
+                           <p class="one_p">Handcrafted by</p>
+                           <img src="images/Y-E-B-O-Logo.png" alt="photo">
+                        </div>
+                    </div>
+                </div>    
+        </footer>
     </div>
 </body>
 </html>
