--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,15 @@
    <div class="wrapper">
     <header class="header">
         <div class="container">
+            <nav class="menu_nav">
+                <a href="">about us</a>
+                <a href="">.</a>
+                <a href="">work</a>
+                <a href=""><img src="images/Logo.png" alt="logo" class="logo"></a>
+                <a href="">shop</a>
+                <a href="">.</a>
+                <a href="">contact</a>
+            </nav>
         </div>
     </header>
 <!-- First Block -->
@@ -40,29 +49,47 @@
     </section>
     <!-- GALLERY BLOCK 1 -->
         <div class="gallery_1">
-            <div class="box1"><img src="images/Layer-101.jpg" alt="image" class="img_gallery1"></div>
+            <div class="box1">
+                <img src="images/Layer-101.jpg" alt="image" class="img_gallery1">
+                <img src="images/Logo1.png" alt="logo1" class="logoinbox">
+            </div>
             <div class="box2">
                 <img src="images/Icon1.png" alt="icon" class="icon">
                 <h4>vintage Oliva</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</p>
             </div>
-            <div class="box3"><img src="images/Layer-11.jpg" alt="image" class="img_gallery1"></div>
+            <div class="box3">
+                <img src="images/Layer-11.jpg" alt="image" class="img_gallery1">
+                <img src="images/Bg2.png" alt="bg" class="bg">
+            </div>
             <div class="box4">
                 <img src="images/Icon2.png" alt="icon" class="icon">
                 <h4>La Boriosa</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
             </div>
-            <div class="box5"><img src="images/Layer-13.jpg" alt="image" class="img_gallery1"></div>
-            <div class="box6"><img src="images/Layer-12.jpg" alt="image" class="img_gallery1"></div>
-            <div class="box7"><img src="images/Layer-151.jpg" alt="image" class="img_gallery1"></div>
+            <div class="box5">
+                <img src="images/Layer-13.jpg" alt="image" class="img_gallery1">
+                <img src="images/Bg2.png" alt="bg" class="bg">
+            </div>
+            <div class="box6">
+                <img src="images/Layer-12.jpg" alt="image" class="img_gallery1">
+                <img src="images/Logo2.png" alt="logo2" class="logoinbox">
+            </div>
+            <div class="box7">
+                <img src="images/Layer-151.jpg" alt="image" class="img_gallery1">
+                <img src="images/Logo3.png" alt="logo3" class="logoinbox2">
+            </div>
             <div class="box8">
                 <img src="images/Icon3.png" alt="icon" class="icon">
                 <h4>retrò Bike - M. Hulot</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
             </div>
-            <div class="box9"><img src="images/Layer-16.jpg" alt="image" class="img_gallery1"></div>
+            <div class="box9">
+                <img src="images/Layer-16.jpg" alt="image" class="img_gallery1">
+                 <img src="images/Bg2.png" alt="bg" class="bg">
+            </div>
             <div class="box10"><img src="images/Layer-14.jpg" alt="image" class="img_gallery1"></div>
         </div>
     <!-- END GALLERY BLOCK 1 -->
@@ -138,7 +165,7 @@
         </section>
         <div class="clear"></div>
         <footer class="footer">
-           <div class="all-container">
+           <div class="container">
             <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 b-box">
                                 <div class="text">
