--- a/app/index.html
+++ b/app/index.html
@@ -115,29 +115,61 @@
      <section >
         
          <div class="gallery_2">
-           <div class="item_1">
-                <a href="#" class="a_gallery"><img src="images/Layer-19.jpg" alt="" class="gallery_img"></a>
+           <div class="item_1 all_item">
+                <img src="images/Layer-19.jpg" alt="gallery" class="gallery_img">
+                <div class="gallery_hover">
+                    <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                    <a href="#" class="a_gallery">shope now</a>
+                </div>
            </div>
-            <div class="item_2">
-               <a href="#" class="a_gallery"><img src="images/Layer-21.jpg" alt="" class="gallery_img"></a>
+            <div class="item_2 all_item">
+               <img src="images/Layer-21.jpg" alt="gallery" class="gallery_img">
+                    <div class="gallery_hover">
+                        <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                        <a href="#" class="a_gallery">shope now</a>
+                    </div>
            </div>
-           <div class="item_3">
-                <a href="#" class="a_gallery"><img src="images/Layer-20.jpg" alt="" class="gallery_img"></a>
+           <div class="item_3 all_item">
+                <img src="images/Layer-20.jpg" alt="gallery" class="gallery_img">
+                <div class="gallery_hover">
+                    <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                    <a href="#" class="a_gallery">shope now</a>
+                </div>
            </div>
-           <div class="item_4">
-                <a href="#" class="a_gallery"><img src="images/Layer-22.jpg" alt="" class="gallery_img"></a>
+           <div class="item_4 all_item">
+               <img src="images/Layer-22.jpg" alt="gallery" class="gallery_img">
+               <div class="gallery_hover">
+                    <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                    <a href="#" class="a_gallery">shope now</a>
+                </div>
            </div>
-            <div class="item_5">
-                <a href="#" class="a_gallery"><img src="images/Layer-25.jpg" alt="" class="gallery_img"></a>
+            <div class="item_5 all_item">
+               <img src="images/Layer-25.jpg" alt="gallery" class="gallery_img">
+               <div class="gallery_hover">
+                    <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                    <a href="#" class="a_gallery">shope now</a>
+                </div>
            </div>
-           <div class="item_6">
-                <a href="#" class="a_gallery"><img src="images/Layer-23.jpg" alt="" class="gallery_img"></a>
+           <div class="item_6 all_item">
+                <img src="images/Layer-23.jpg" alt="gallery" class="gallery_img">
+                <div class="gallery_hover">
+                    <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                    <a href="#" class="a_gallery">shope now</a>
+                </div>
            </div>
-           <div class="item_7">
-                <a href="#" class="a_gallery"><img src="images/Layer-24.jpg" alt="" class="gallery_img"></a>
+           <div class="item_7 all_item">
+                <img src="images/Layer-24.jpg" alt="gallery" class="gallery_img">
+                <div class="gallery_hover">
+                    <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                    <a href="#" class="a_gallery">shope now</a>
+                </div>
            </div>
-           <div class="item_8">
-                <a href="#" class="a_gallery"><img src="images/Layer-26.jpg" alt="" class="gallery_img"></a>
+           <div class="item_8 all_item">
+                <img src="images/Layer-26.jpg" alt="gallery" class="gallery_img">
+                <div class="gallery_hover">
+                    <img src="images/Shape-13.png" alt="logo" class="image_g2">
+                    <a href="#" class="a_gallery">shope now</a>
+                </div>
            </div>
          </div>
      </section>
